# WasteLens

./: .gitignore  LISCENSE  README.md  docker-compose.override.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: api-ci.yml  cd-model.yml  model-training.yml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/alembic/: env.py
api/app/: main.py  metrics.py
api/app/core/: config.py  dependencies.py  owasp.md  security.py
api/app/db/: base.py  models.py  seed.py
api/app/routers/: auth.py  health.py  history.py  predict.py  reports.py  users.py
api/app/schemas/: auth.py  history.py  predict.py  users.py
api/app/services/: model.py
api/docs/: openapi.json
api/tests/: conftest.py  test_auth.py  test_health.py  test_history.py  test_predict.py  test_reports.py  test_users.py
app/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
app/src/: App.jsx  main.jsx
app/src/docs/: auth-flow.md
app/src/services/: api.js
app/src/wastelens/: WastePic.jsx  constants.js  icons.jsx  index.js  tokens.css
docs/: agile.md  architecture.md  benchmark-ia.md  ci-cd.md  incidents.md  merise.md  monitoring.md  rgpd.md  testing.md  user-stories.md  veille.md
model/: dataset.py  download_dataset.py  evaluate.py  pyproject.toml  train.py  validate_dataset.py
model/reports/: evaluation_report.json  training_history.json  training_notes.md
model/tests/: test_validate_dataset.py
monitoring/: Dockerfile.grafana
monitoring/prometheus/: prometheus.yml
scripts/: deploy-wastelens-model.sh
(+13 files in other folders)
